--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,27 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.4.1</version>
     </dependency>
+
+    <!--Spring Security-->
+    <!--<dependency>-->
+      <!--<groupId>org.springframework.security</groupId>-->
+      <!--<artifactId>spring-security-core</artifactId>-->
+      <!--<version>4.0.2.RELEASE</version>-->
+    <!--</dependency>-->
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+      <version>4.0.2.RELEASE</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+      <version>4.0.2.RELEASE</version>
+    </dependency>
+
+
     <!-- Hibernate -->
     <dependency>
       <groupId>org.hibernate</groupId>
