--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-#spring.datasource.platform=mysql
+#spring.datasource.platform=org.hibernate.dialect.MySQLDialect
 #spring.jpa.show-sql=false
 #spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/simplebase
 spring.datasource.username=root
 spring.datasource.password=Superpassword0
+#&12345$
