Implemented user preferable algorithm

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/simplebase
 spring.datasource.username=root
 spring.datasource.password=Superpassword0
+logging.file=scylla.log
 #&12345$
